# python_project_template

./: .gitignore  Makefile  README.md  clone-and-install  pyproject.toml
.github/workflows/: create_github_release.yaml
python_project_template/: main.py
tests/: test_main.py
